2012-04-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/update_manager.php: Changed images in info license modal 
	window.
	
	* images/license_key.png
	 images/lock_license.png: Added images for license modal windows.

2012-04-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	
	* images/enterprise_version.png
	 images/online_help.png
	 images/error_login.png
	 images/documentation.png
	 images/support.png: Added images for login error and login help 
	 modal windows.
	 
	* general/login_help_dialog.php
	 general/login_page.php: Changed images and layout in modal windows.  

2012-04-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_events.php: into the function
	"events_validate_event" fixed the return false when fail validation.
	
	* include/functions_network_components.php: fixed the includes.
	
	* operation/agentes/exportdata.php: cleaned source code style.
	
	* include/functions_api.php: fixed the checking error to healty
	level into the function "get_events".

2012-04-27  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/alerts/alerts_list.list.php: Fixed: Action filter
	don't show right actions group.

2012-04-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css
	 include/javascript/jquery.pandora.js
	 general/login_help_dialog.php: Added input for license in blocking
	 license modal windows.

2012-04-26  Sancho lerena

	* operation/agentes/networkmap.php: Wider field for network map name.

2012-04-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup.php: Check for update manager installed in 
	this view.

2012-04-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/exportdata.php,
	operation/events/events_list.php: cleaned source code style.
	
	* include/functions_events.php,
	include/functions_network_components.php,
	include/functions_api.php: fixed some things, the function
	"events_validate_event" when can't update as validate any event