@@ -1,3 +1,8 @@
+2012-04-28  Junichi Satoh  <junichi@rworks.jp>
+
+	* godmode/admin_access_logs.php, include/functions_graph.php: Fixed
+	SQL error with PostgreSQL.
+
 2012-04-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* extensions/update_manager.php: Changed images in info license modal 
